@@ -1,6 +1,7 @@
 Revision history for Const-Fast
 
 {{$NEXT}}
+          Lazy load Storable, it's usually not necessary
 
 0.012     2012-08-09 13:51:29 Europe/Bucharest
           Depend on Test::Exception 0.28
